# swapp_face_api

./: .gitignore  Dockerfile  README.md  all_python_code.txt  api_docs.md  br_requirements.txt  codeformer_requirements.txt  cuda-11-8-0-download-archive  dockerfile  main.py  old_dockerfile  pipeline_test.py  prompt.txt  pyproject.toml  requirements.txt  requirements_2.txt  serve_config.yaml  serve_config2.yaml  test.py
.github/workflows/: deployment.yml
CodeFormer/basicsr/archs/: arch_util.py
MyCodeFormer/: inference_codeformer.py
MyCodeFormer/basicsr/: __init__.py
app/: codeformer.py  codeformer2.py  main.py  schema.py
app/api/: main.py  new_api.py  schemas.py
app/configs/: anyscale_bucket_credentials.json  conda_config.yaml  serve_config.yaml  serve_config_cpu.yaml  serve_config_gpu.yaml  service_config copy.yaml  service_config.yaml  service_config_cpu.yaml  service_config_gpu.yaml  service_config_gpu_load.yaml  service_config_gpu_load2.yaml  service_config_gpu_to_0.yaml
app/pipe/: pipeline.py  swap_processor.py
app/services/: gcp_bucket_manager.py
app/test/: codeformer_test.py  diagnose_cuda.py  full_api_test.py  load_test_runner_simple.py  locust_face_swap_simple.py  locustfile.py  new_full_test.py  test.md  test.py
app/utils/: tensorrt_utils.py  utils.py
src/: globals.py  main.py  serve_config.yaml  startup.py  utils.py
src/controllers/: .swap_face.py.swp  swap_face.py  utils.py
src/model/: __init__.py  interface.py
src/pipe/: pipeline.py  temp_pipeline.py
test/: pipeline_test.py  providers_test.py  test_request.py
(+39 files in other folders)
